Fixed more tests and dependencies